# quine-grub-wasm

./: .gitignore  CMakeLists.txt  README.md  TODO.md  imgui.ini
docs/: ISSUE_SUMMARY.md  PORTING_REPORT.md  PORTING_REPORT_TEMPLATE.md  README_PORTING_SUMMARY.md  TESTS.md  architecture.md  design.md  workflows.md
docs/specs/: spec_cli.md  spec_heuristics.md  spec_multi.md  spec_neural.md  spec_quine_reboot.md  spec_telemetry.md
scripts/: build.sh  run.sh  setup.sh  test.sh
src/: main.cpp
src/core/: app.cpp  app.h  base64.cpp  base64.h  cli.cpp  cli.h  constants.h  exporter.cpp  exporter.h  fsm.cpp  fsm.h  log.cpp  log.h  train.cpp  train.h  types.h  util.cpp  util.h
src/gui/: colors.h  heatmap.cpp  heatmap.h  panels.cpp  panels.h  window.cpp  window.h
src/nn/: advisor.cpp  advisor.h  feature.cpp  feature.h  loss.cpp  loss.h  policy.cpp  policy.h  train.cpp  train.h
src/wasm/: evolution.cpp  evolution.h  kernel.cpp  kernel.h  parser.cpp  parser.h  sequence_model.wasm  sequence_model.wat
test/: CMakeLists.txt  test_advisor.cpp  test_app.cpp  test_base64.cpp  test_cli.cpp  test_cli_behavior.cpp  test_evolution.cpp  test_export.cpp  test_feature.cpp  test_log.cpp  test_loss.cpp  test_policy.cpp  test_state.cpp  test_train.cpp  test_training_phase.cpp  test_util_dpi.cpp  test_wasm.cpp
